# colored_bad_apple

./: .gitignore  Cargo.toml  README.md
src/: main.rs
