[package]
name = "colored_bad_apple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
image = "0.24.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
ureq = { version="2.6.2", features=["json"] }
